# MLProject

./: Final_Project_Writeup.ipynb  LICENSE.txt  README.md  pyproject.toml  requirements.txt
Documentation/: LearningResources.md  SoftwareOverview.md
Documentation/Markmap/: SoftwareMindMap.html  SoftwareMindMap.md
src/checker_players/Checker_Environment/: Board.py
src/checker_players/Interpretters/: DoubleColumnInterpretter.py  FlatFeaturesInterpretter.py  Interpretter.py
src/checker_players/Players/: AlphaBeta.py  DQNPlayer.py  DQNPlayer2.py  MinimaxPlayer.py  MultilayerPerceptron.py  Player.py  RandomPlayer.py
src/checker_players/Runners/: TestRunner.py  TrainRunner.py
src/checker_players/Runners/Loggers/: Logger.py  SimpleLogger.py  TrainLogger.py
src/scripts/: evaluate_all_models.ipynb  train_multilayer_percptron.ipynb
src/test/Checker_Environment/: Board.ipynb
src/test/Interpretters/: DoubleColumnInterpretter.ipynb
src/test/Players/: AlphaBeta.ipynb  MinimaxPlayer.ipynb  MultilayerPerceptron.ipynb  RandomPlayer.ipynb
src/test/Runners/: TestRunner.ipynb
src/test/Runners/Loggers/: SimpleLogger.ipynb
