[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "checker-players"
version = "1.0.2"
authors = [
  { name="Jacob Lopez", email="jacoblopez757@gmail.com" },
  { name="Hannah Qu", email="hqu6@jhu.edu" },
  { name="Noam Rotenberg", email="nrotenb1@jhu.edu"},
  { name="Smirti Srikanth", email="ssrikan2@jhu.edu"}
]
description = "A small platform for playing chess with various built in AI players. Built on PyTorch."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]

[project.urls]
"Homepage" = "https://github.com/smritisrikanth/MLProject"
"Bug Tracker" = "https://github.com/smritisrikanth/MLProject/issues"